# unc_tools

./: .gitignore  LICENSE  README.md  graphjson2df.py  main.py  pyproject.toml  setup.py  test.csv  test.md
notebooks/: README.md  start.ipynb
notebooks/1 - Function1Based/: 1.ipynb  2.ipynb  3.ipynb
notebooks/2 - UncRegression/: 1.ipynb  2.ipynb
notebooks/3 - Examples/: 1.ipynb  2.ipynb  3.ipynb  4.ipynb  velocities.csv
tests/: test_expr_find_x.py  test_find_x.py  test_unc_solve.py
unc_tools/: README.md  __init__.py  default_functions.py  descriptors.py  exceptions.py  patches.py  py.typed  reqs.txt  unc_regression.py
unc_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
