[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unc_tools"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.6"
authors = [{ name = "Savateykin Yaroslav", email = "yaroslavsavateykin@yandex.ru" }]
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "contourpy==1.3.3",
  "cycler==0.12.1",
  "fonttools==4.59.2",
  "kiwisolver==1.4.9",
  "matplotlib==3.10.6",
  "mpmath==1.3.0",
  "narwhals==2.5.0",
  "numpy==2.3.3",
  "packaging==25.0",
  "pandas==2.3.2",
  "pillow==11.3.0",
  "plotly==6.3.0",
  "pyparsing==3.2.4",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "scipy==1.16.2",
  "six==1.17.0",
  "sympy==1.14.0",
  "tzdata==2025.2",
  "uncertainties==3.2.3",
]

[project.optional-dependencies]
dev = []
test = []
docs = []

[tool.hatch.build.targets.wheel]
packages = ["unc_tools"]
include = ["LICENSE"]

[tool.hatch.build.targets.sdist]
include = ["LICENSE"]
